examples/test/testpolicy2464.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2464
  namespace: namespace379
spec:
  podSelector:
    matchLabels:
      key2: value40
      key24: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value15
      podSelector:
        matchLabels:
          key25: value0
          key46: value19
          key10: value12
